--- a/quizApp/templates/pretest.html
+++ b/quizApp/templates/pretest.html
@@ -7,12 +7,22 @@
           <h3>Training and Quiz</h3>
       </div>
     </header>
+
+    <div id='pretest-start-area' class="navbar-button col-xs-12 col-sm-12">
+      <button id="pretest-start-button" type="button" class="btn btn-primary">Start</button>
+    </div>
+
     <section class='container'>
       <div class='row'>
-        <div class='col-sm-12 col-md-12'>
-          <p>Login with the id you were assigned to begin.<br>
-          A start button will appear once you have logged in.</p>
-
+        <div id='graph1' class='col-sm-12 col-md-12 col-md-offset-4'>
+        </div>
+      </div> <!-- end .row -->
+      <div class='row'>
+        <div id='graph2' class='col-sm-12 col-md-12 col-md-offset-4'>
+        </div>
+      </div> <!-- end .row -->
+      <div class='row'>
+        <div id='graph3' class='col-sm-12 col-md-12 col-md-offset-4'>
         </div>
       </div> <!-- end .row -->
     </section>
