--- a/quizApp/templates/pretest.html
+++ b/quizApp/templates/pretest.html
@@ -26,9 +26,10 @@
         </div>
       </div> <!-- end .row -->
     </section>
-    <div class="container col-xs-12 col-sm-12 col-md-12">
 
-    <h2>Checkbox (multiple choice)</h2>
+    <div id='pretest-question' class="container col-xs-12 col-sm-12 col-md-12">
+
+    <!-- <h2>Checkbox (multiple choice)</h2>
 
     <div class="btn-group-vertical" data-toggle="buttons">
       <label class="btn btn-primary">
@@ -54,12 +55,12 @@
       <label class="btn btn-primary">
         <input type="radio" name="options" id="option3"> Option 3
       </label>
-    </div>
+    </div> -->
 
   </div>
 
-  <div class='col-xs-12 col-sm-12 col-md-offset-10 col-md-12'>
-    <button id="quiz-next" type="button" class="btn btn-primary" data-dismiss="modal">Next</button>
+  <div id='pretest-next' class='col-xs-12 col-sm-12 col-md-offset-10 col-md-12'>
+    <!-- <button id="quiz-next" type="button" class="btn btn-primary" data-dismiss="modal">Next</button> -->
   </div>
 
 {% include 'footer.html' %}
