--- a/quizApp/templates/pretest.html
+++ b/quizApp/templates/pretest.html
@@ -14,15 +14,15 @@
 
     <section class='container'>
       <div class='row'>
-        <div id='graph1' class='col-sm-12 col-md-12 col-md-offset-4'>
+        <div id='graph1' class='col-sm-12 col-md-12'>
         </div>
       </div> <!-- end .row -->
       <div class='row'>
-        <div id='graph2' class='col-sm-12 col-md-12 col-md-offset-4'>
+        <div id='graph2' class='col-sm-12 col-md-12'>
         </div>
       </div> <!-- end .row -->
       <div class='row'>
-        <div id='graph3' class='col-sm-12 col-md-12 col-md-offset-4'>
+        <div id='graph3' class='col-sm-12 col-md-12'>
         </div>
       </div> <!-- end .row -->
     </section>
