--- a/quizApp/static/css/main.css
+++ b/quizApp/static/css/main.css
@@ -184,9 +184,22 @@ a .btn {
     border-color: #2e6da4;
 }
 
+.btn-primary.active{
+    background-color:#e31a1c;
+    border-color:#bd0026;
+    color:#000;
+}
 
+.btn.btn-radio:hover {
+    background-color:#e31a1c;
+    border-color:#bd0026;
+    color:#333;
+}
 
-
+.graph {
+    width: 70%;
+    height: 70%;
+}
 
 .no-disc {
     list-style-type: none;
