--- a/quizApp/templates/training.html
+++ b/quizApp/templates/training.html
@@ -14,7 +14,7 @@
 
     <section class='container'>
       <div class='row'>
-        <div id='graph1' class='col-sm-12 col-md-12 col-md-offset-4'>
+        <div id='graph1' class='col-sm-12 col-md-12'>
         </div>
       </div> <!-- end .row -->
     </section>
