Added experiments, working on forms and validation. Also added wtforms.

--- a/quizApp/templates/header.html
+++ b/quizApp/templates/header.html
@@ -12,6 +12,7 @@
     <link href="{{ url_for('static', filename='css/bootstrap-switch.min.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/bootstrap-tagsinput.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/bootstrap-datetimepicker.min.css') }}" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome.min.css') }}" type='text/css'>
 
     <!-- INDEX -->
@@ -26,6 +27,7 @@
 
     <!-- All -->
     <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/moment.js')}}"></script>
     <script src="{{ url_for('static', filename='js/jquery-ui/jquery-ui.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap_components.js') }}"></script>
@@ -35,6 +37,7 @@
     <script src="{{ url_for('static', filename='js/jquery.waypoints.min.js') }}"></script>
     <script src="http://www.bitstorm.org/jquery/shadow-animation/jquery.animate-shadow-min.js"></script>
     <script src="{{ url_for('static', filename='js/jquery.pulse.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap-datetimepicker.js') }}"></script>
     <script type=text/javascript>$SCRIPT_ROOT = {{ request.script_root|tojson|safe }} + "/";</script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
