--- a/quizApp/templates/index.html
+++ b/quizApp/templates/index.html
@@ -10,13 +10,13 @@
     <section class='container'>
       <div class='row'>
         <div class='col-sm-12 col-md-12'>
-          <p>Login with the id you were assigned to begin.<br>
-          A start button will appear once you have logged in.</p>
+          <p>Login with the id you were assigned to begin.</p>
+          <p>Then, continue to the <a href="{{ url_for('read_experiments') }}">
+              Experiments page.</a></p>
 
         </div>
       </div> <!-- end .row -->
     </section>
-    <div id='quiz-start-area' class="navbar-button col-xs-12 col-sm-12">
     </div>
 
 {% include 'footer.html' %}
