--- a/quizApp/templates/experiments.html
+++ b/quizApp/templates/experiments.html
@@ -1,79 +1,79 @@
 {% include 'header.html' %}
 <script src="{{ url_for('static', filename='js/experiments_ajax.js') }}"></script>
 <div id='index' class='index wrapper container'>
-    <header id='main-search' class='container'>
-        <div class='page-header row'>
-    </header>
-    <section class='container'>
-        <meta name="csrf-token" content="{{ csrf_token() }}">
-        <h3>Experiment List</h3>
-        <table class="table table-striped" id="exp_table">
-            <thead>
-                <tr>
-                    <td>Name</td>
-                    <td>Start time</td>
-                    <td>End time</td>
-                    <td>Modify</td>
-                    <td>Delete</td>
-                </tr>
-            </thead>
-            <tbody>
-                {% for exp in experiments %}
-                <tr id="row-{{ exp.id }}">
-                    <td>{{exp.name}}</td>
-                    <td>{{exp.start|datetime_format}}</td>
-                    <td>{{exp.stop|datetime_format}}</td>
-                    <td><button type="button" class="btn
-                    btn-primary">Modify</button></td>
-                    <td><form action="{{ url_for('delete_experiment') }}"
-                              id="delete-form-{{ exp.id }}" class="delete-form">
-                            {{ delete_form.exp_id(value=exp.id, class_="exp_id") }}
-                            {{ delete_form.submit(class_="btn btn-danger",
-                            value="Delete") }}
-                        </form>
+  <header id='main-search' class='container'>
+    <div class='page-header row'>
+  </header>
+  <section class='container'>
+    <meta name="csrf-token" content="{{ csrf_token() }}">
+    <h3>Experiment List</h3>
+    <table class="table table-striped" id="exp_table">
+      <thead>
+        <tr>
+          <td>Name</td>
+          <td>Start time</td>
+          <td>End time</td>
+          <td>Modify</td>
+          <td>Delete</td>
+        </tr>
+      </thead>
+      <tbody>
+        {% for exp in experiments %}
+        <tr id="row-{{ exp.id }}">
+          <td><a href="{{ url_for('view_experiment', exp_id=exp.id) }}">{{exp.name}}</a></td>
+          <td>{{exp.start|datetime_format}}</td>
+          <td>{{exp.stop|datetime_format}}</td>
+          <td><button type="button" class="btn
+                                    btn-primary">Modify</button></td>
+          <td><form action="{{ url_for('delete_experiment') }}"
+          id="delete-form-{{ exp.id }}" class="delete-form">
+          {{ delete_form.exp_id(value=exp.id, class_="exp_id") }}
+          {{ delete_form.submit(class_="btn btn-danger",
+          value="Delete") }}
+            </form>
+          </td>
+        </tr>
+        {% endfor %})
+        <tr>
+          <form action="{{ url_for('create_experiment') }}"
+          id="create-form">
+            <td>{{ create_form.name(class_='form-control') }}</td>
+            <td>{{ create_form.start }}</td>
+            <td>{{ create_form.stop }}</td>
+            <td>{{ create_form.submit(class_="btn btn-success",
+            value="Create") }}</td>
+            <td></td>
+            <!--
+              <td>
+              <input type="text" name='name' class="form-control"
+              placeholder="name">
+              </td>
+              <td>
+              </td>
+              <td>
+              <div class="input-group date" id="end_time">
+              <input type="text" class="form-control"
+              name="start"/>
+              <span class="input-group-addon">
+              <span class="glyphicon
+                    glyphicon-calendar"></span>
+                    </span>
+                    </div>
                     </td>
-                </tr>
-                {% endfor %})
-                <tr>
-                    <form action="{{ url_for('create_experiment') }}"
-                    id="create-form">
-                        <td>{{ create_form.name(class_='form-control') }}</td>
-                        <td>{{ create_form.start }}</td>
-                        <td>{{ create_form.stop }}</td>
-                        <td>{{ create_form.submit(class_="btn btn-success",
-                            value="Create") }}</td>
-                        <td></td>
-                    <!--
-                        <td>
-                            <input type="text" name='name' class="form-control"
-                                               placeholder="name">
-                        </td>
-                        <td>
-                        </td>
-                        <td>
-                            <div class="input-group date" id="end_time">
-                                <input type="text" class="form-control"
-                                    name="start"/>
-                                <span class="input-group-addon">
-                                    <span class="glyphicon
-                                    glyphicon-calendar"></span>
-                                </span>
-                            </div>
-                        </td>
-                        <td>
-                            <input type="submit" class="btn btn-success"
-                                                 value="Create">
-                        </td>
+                    <td>
+                    <input type="submit" class="btn btn-success"
+                    value="Create">
+                    </td>
                     -->
-                    </form>
-            </tbody>
-            <script type="text/javascript">
-$(function () {
-    $("#start_time").datetimepicker();
-    $("#end_time").datetimepicker();
-});
-            </script>
-    </section>
-        </div>
+          </form>
+      </tbody>
+      <script type="text/javascript">
+      $(function () {
+      $("#start_time").datetimepicker();
+      $("#end_time").datetimepicker();
+      });
+      </script>
+  </section>
+    </div>
 
-        {% include 'footer.html' %}
+{% include 'footer.html' %}
