Working on getting updates to work

--- a/quizApp/templates/experiments.html
+++ b/quizApp/templates/experiments.html
@@ -10,38 +10,43 @@
     <table class="table table-striped" id="exp_table">
       <thead>
         <tr>
-          <td>Name</td>
-          <td>Start time</td>
-          <td>End time</td>
-          <td>Modify</td>
-          <td>Delete</td>
+          <th class="col-md-3">Name</th>
+          <th class="col-md-2">Start time</th>
+          <th class="col-md-2">End time</th>
+          <th class="col-md-1">Modify</th>
+          <th class="col-md=1">Delete</th>
         </tr>
       </thead>
       <tbody>
         {% for exp in experiments %}
-        <tr id="row-{{ exp.id }}">
-          <td><a href="{{ url_for('view_experiment', exp_id=exp.id) }}">{{exp.name}}</a></td>
-          <td>{{exp.start|datetime_format}}</td>
-          <td>{{exp.stop|datetime_format}}</td>
-          <td><button type="button" class="btn
-                                    btn-primary">Modify</button></td>
-          <td><form action="{{ url_for('delete_experiment') }}"
-          id="delete-form-{{ exp.id }}" class="delete-form">
-          {{ delete_form.exp_id(value=exp.id, class_="exp_id") }}
-          {{ delete_form.submit(class_="btn btn-danger",
-          value="Delete") }}
+        <tr data-id="{{ exp.id }}">
+          <td class="name"><a href="{{ url_for('view_experiment', exp_id=exp.id) }}">{{exp.name}}</a></td>
+          <td class="start">{{exp.start|datetime_format}}</td>
+          <td class="stop">{{exp.stop|datetime_format}}</td>
+          <td>
+            <button type="button" class="btn
+            btn-primary btn-modify" id="btn-modify-{{ exp.id }}" >
+            Modify
+            </button>
+          </td>
+          <td>
+            <form action="{{ url_for('delete_experiment') }}"
+                  id="delete-form-{{ exp.id }}" class="delete-form">
+              {{ delete_form.exp_id(value=exp.id, class_="exp_id") }}
+              {{ delete_form.submit(class_="btn btn-danger",
+              value="Delete") }}
             </form>
           </td>
         </tr>
         {% endfor %})
         <tr>
           <form action="{{ url_for('create_experiment') }}"
-          id="create-form">
+                id="create-form">
             <td>{{ create_form.name(class_='form-control') }}</td>
             <td>{{ create_form.start }}</td>
             <td>{{ create_form.stop }}</td>
             <td>{{ create_form.submit(class_="btn btn-success",
-            value="Create") }}</td>
+              value="Create") }}</td>
             <td></td>
             <!--
               <td>
@@ -56,24 +61,24 @@
               name="start"/>
               <span class="input-group-addon">
               <span class="glyphicon
-                    glyphicon-calendar"></span>
-                    </span>
-                    </div>
-                    </td>
-                    <td>
-                    <input type="submit" class="btn btn-success"
-                    value="Create">
-                    </td>
-                    -->
+              glyphicon-calendar"></span>
+              </span>
+              </div>
+              </td>
+              <td>
+              <input type="submit" class="btn btn-success"
+              value="Create">
+              </td>
+            -->
           </form>
       </tbody>
       <script type="text/javascript">
-      $(function () {
-      $("#start_time").datetimepicker();
-      $("#end_time").datetimepicker();
-      });
+$(function () {
+  $("#start_time").datetimepicker();
+  $("#end_time").datetimepicker();
+});
       </script>
   </section>
     </div>
 
-{% include 'footer.html' %}
+    {% include 'footer.html' %}
