--- a/quizApp/templates/header.html
+++ b/quizApp/templates/header.html
@@ -17,8 +17,8 @@
 
     <!-- INDEX -->
     {% if is_home %}
-      <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-      <link rel="stylesheet" href="http://leaflet.github.io/Leaflet.markercluster/dist/MarkerCluster.Default.css" />
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+    <link rel="stylesheet" href="http://leaflet.github.io/Leaflet.markercluster/dist/MarkerCluster.Default.css" />
     {% endif %}
     <!-- CONDITION PAGE -->
     <link href="{{ url_for('static', filename='css/condition.css') }}" rel="stylesheet">
@@ -49,33 +49,34 @@
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='assets/favicon_green.png') }}">
   </head>
   <body>
-  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container-fluid wrapper">
-      <div class="row col-xs-12 col-sm-12 col-md-6">
-        <!-- <a class="navbar-brand" href="{{ url_for('home') }}">
-          <img alt="Brand" src="{{ url_for('static', filename='assets/health-care-symbol-png.png') }}">
-        </a> -->
-        <h1 class='site-name'><span style="letter-spacing: 3px;">Quiz App</span></h1>
-      </div>
-      {% if not is_home %}
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container-fluid wrapper">
+        <div class="row col-xs-12 col-sm-12 col-md-6">
+          <!-- <a class="navbar-brand" href="{{ url_for('home') }}">
+            <img alt="Brand" src="{{ url_for('static', filename='assets/health-care-symbol-png.png') }}">
+            </a> -->
+            <h1 class='site-name'><span style="letter-spacing: 3px;">Quiz App</span></h1>
+        </div>
+        {% if not is_home %}
         <!-- <div class="navbar-search col-xs-12 col-sm-12 col-md-offset-0 col-md-4">
           <div class="input-group">
-            <label class="sr-only" for="search-text">Condition and Institution Search</label>
-            <div class="input-group-addon">
-              <span class='glyphicon glyphicon-search'></span>
-            </div>
-            <input type="typeahead" class="form-control" id="search-text" placeholder="Search for a condition or institution">
-            <div id="search-button" class="btn btn-primary input-group-addon">
-              Search
-            </div>
+          <label class="sr-only" for="search-text">Condition and Institution Search</label>
+          <div class="input-group-addon">
+          <span class='glyphicon glyphicon-search'></span>
           </div>
-        </div> -->
-      {% endif %}
-      <div id="login-area" class="navbar-button col-xs-12 col-sm-12 {% if is_home %}col-md-offset-4{% else %}col-md-offset-4{% endif %} col-md-2">
-        <button id="login-button" type="button" class="btn btn-success btn-xs" data-toggle="modal" data-target="#login-modal">
-          Login
-        </button>
-      </div>
-  </nav>
+          <input type="typeahead" class="form-control" id="search-text" placeholder="Search for a condition or institution">
+          <div id="search-button" class="btn btn-primary input-group-addon">
+          Search
+          </div>
+          </div>
+          </div> -->
+          {% endif %}
+          <div id="login-area" class="navbar-button col-xs-12 col-sm-12 {% if is_home %}col-md-offset-4{% else %}col-md-offset-4{% endif %} col-md-2">
+            <button id="login-button" type="button" class="btn btn-success btn-xs" data-toggle="modal" data-target="#login-modal">
+              Login
+            </button>
+          </div>
+    </nav>
+    <div id='index' class='index wrapper container'>
 
 {% include 'modals.html' %}
