Cleaned up templates, reduced redundancies

--- a/quizApp/templates/done.html
+++ b/quizApp/templates/done.html
@@ -1,11 +1,10 @@
-{% include 'header.html' %}
+{% extends 'header.html' %}
 
-<header id='main-search' class='container'>
-  <div class='page-header row'>
-    <div class='col-xs-12 col-sm-12 col-md-12'>
-      <h3>Thank you for participating.</h3>
-    </div>
-</header>
+{% block title %}
+Thank you for participating.</h3>
+{% endblock %}
+
+{% block content %}
 <section class='container'>
   <div class='row'>
     <div class='col-sm-12 col-md-12'>
@@ -14,5 +13,4 @@
     </div>
   </div> <!-- end .row -->
 </section>
-
-{% include 'footer.html' %}
+{% endblock %}
