--- a/quizApp/templates/experiments.html
+++ b/quizApp/templates/experiments.html
@@ -1,33 +1,40 @@
-{% include 'header.html' %}
-{% import "experiment_macros.html" as exp_macros %}
-<script src="{{ url_for('static', filename='js/experiments_ajax.js') }}"></script>
-<div id='index' class='index wrapper container'>
-  <header id='main-search' class='container'>
-    <div class='page-header row'>
-  </header>
-  <section class='container'>
-    <meta name="csrf-token" content="{{ csrf_token() }}">
-    <h3>Experiment List</h3>
-    <table class="table table-striped" id="exp_table">
-      <thead>
-        <tr>
-          <th class="col-md-3">Name</th>
-          <th class="col-md-2">Start time</th>
-          <th class="col-md-2">End time</th>
-          <th class="col-md-1">Modify</th>
-          <th class="col-md=1">Delete</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for exp in experiments %}
-        {{ exp_macros.experiment_row(exp, delete_form) }}
-        {% endfor %}
-        <tr>
-          {{ exp_macros.create_row(create_form, url_for('create_experiment'),
-          "create-form") }}
-        </tr>
-      </tbody>
-    </table>
-  </section>
+{% extends 'header.html' %}
+{% block head %}
+<meta name="csrf-token" content="{{ csrf_token() }}">
+<link href="{{ url_for('static', filename='css/bootstrap-datetimepicker.min.css') }}" rel="stylesheet">
+<script src="{{ url_for('static', filename='js/moment.js')}}"></script>
+<script src="{{ url_for('static', filename='js/bootstrap-datetimepicker.js') }}"></script>
+{% endblock %}
 
-    {% include 'footer.html' %}
+{% block title %}
+Experiment List
+{% endblock %}
+
+{% import "experiment_macros.html" as exp_macros %}
+
+{% block content %}
+<script src="{{ url_for('static', filename='js/experiments_ajax.js') }}"></script>
+<section class='container'>
+  <table class="table table-striped" id="exp_table">
+    <thead>
+      <tr>
+        <th class="col-md-3">Name</th>
+        <th class="col-md-2">Start time</th>
+        <th class="col-md-2">End time</th>
+        <th class="col-md-1">Modify</th>
+        <th class="col-md=1">Delete</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for exp in experiments %}
+      {{ exp_macros.experiment_row(exp, delete_form) }}
+      {% endfor %}
+      <tr>
+        {{ exp_macros.create_row(create_form, url_for('create_experiment'),
+        "create-form") }}
+      </tr>
+    </tbody>
+  </table>
+</section>
+
+{% endblock %}
