--- a/quizApp/templates/index.html
+++ b/quizApp/templates/index.html
@@ -1,11 +1,10 @@
-{% include 'header.html' %}
+{% extends 'header.html' %}
+{% block title %}
+Training and Quiz
+{% endblock %}
 
-<header id='main-search' class='container'>
-  <div class='page-header row'>
-    <div class='col-xs-12 col-sm-12 col-md-12'>
-      <h3>Training and Quiz</h3>
-    </div>
-</header>
+{% block content %}
+
 <section class='container'>
   <div class='row'>
     <div class='col-sm-12 col-md-12'>
@@ -17,4 +16,4 @@
   </div> <!-- end .row -->
 </section>
 
-{% include 'footer.html' %}
+{% endblock %}
