--- a/quizApp/templates/experiments.html
+++ b/quizApp/templates/experiments.html
@@ -2,7 +2,7 @@
 {% block head %}
 <meta name="csrf-token" content="{{ csrf_token() }}">
 <link href="{{ url_for('static', filename='css/bootstrap-datetimepicker.min.css') }}" rel="stylesheet">
-<script src="{{ url_for('static', filename='js/moment.js')}}"></script>
+<script src="{{ url_for('static', filename='js/moment.min.js')}}"></script>
 <script src="{{ url_for('static', filename='js/bootstrap-datetimepicker.js') }}"></script>
 {% endblock %}
 
