--- a/quizApp/templates/header.html
+++ b/quizApp/templates/header.html
@@ -5,36 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>QuizApp</title>
-
-    <!-- GLOBAL -->
     <link href="{{ url_for('static', filename='js/jquery-ui/jquery-ui.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='css/bootstrap-switch.min.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='css/bootstrap-tagsinput.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome.min.css') }}" type='text/css'>
-
-    <!-- INDEX -->
-    {% if is_home %}
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-    <link rel="stylesheet" href="http://leaflet.github.io/Leaflet.markercluster/dist/MarkerCluster.Default.css" />
-    {% endif %}
-    <!-- CONDITION PAGE -->
-    <link href="{{ url_for('static', filename='css/condition.css') }}" rel="stylesheet">
-    <!-- INSTITUTION PAGE -->
-    <link href="{{ url_for('static', filename='css/institution.css') }}" rel="stylesheet">
-
-    <!-- All -->
     <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/jquery-ui/jquery-ui.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/bootstrap_components.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/bootstrap-switch.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/bootstrap-tagsinput.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/typeahead.bundle.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/jquery.waypoints.min.js') }}"></script>
-    <script src="http://www.bitstorm.org/jquery/shadow-animation/jquery.animate-shadow-min.js"></script>
-    <script src="{{ url_for('static', filename='js/jquery.pulse.min.js') }}"></script>
     <script type=text/javascript>$SCRIPT_ROOT = {{ request.script_root|tojson|safe }} + "/";</script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -42,8 +18,6 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <!--favicon-->
-    <link rel="icon" type="image/png" href="{{ url_for('static', filename='assets/favicon_green.png') }}">
     {% block head %}{% endblock %}
   </head>
   <body>
@@ -52,8 +26,6 @@
         <div class="row col-xs-12 col-sm-12 col-md-6">
             <h1 class='site-name'><span style="letter-spacing: 3px;">Quiz App</span></h1>
         </div>
-        {% if not is_home %}
-          {% endif %}
           <div id="login-area" class="navbar-button col-xs-12 col-sm-12 {% if is_home %}col-md-offset-4{% else %}col-md-offset-4{% endif %} col-md-2">
             <button id="login-button" type="button" class="btn btn-success btn-xs" data-toggle="modal" data-target="#login-modal">
               Login
@@ -62,20 +34,15 @@
       </div>
     </nav>
     <div id='index' class='index wrapper container'>
-
       <header id='main-search' class='container'>
-        <div class='page-header row'>
-          <div class='col-xs-12 col-sm-12 col-md-12'>
             <h3>{% block title %}{% endblock %}</h3>
-          </div>
-        </div>
       </header>
+      <section class='container'>
       {% include 'modals.html' %}
 
       {% block content %}{% endblock %}
-
+      </section>
     </div> <!-- end .wrapper.container -->
-
   </body>
   <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 </html>
