--- a/quizApp/templates/header.html
+++ b/quizApp/templates/header.html
@@ -47,22 +47,28 @@
     {% block head %}{% endblock %}
   </head>
   <body>
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container-fluid wrapper">
-        <div class="row col-xs-12 col-sm-12 col-md-6">
-            <h1 class='site-name'><span style="letter-spacing: 3px;">Quiz App</span></h1>
-        </div>
-        {% if not is_home %}
-          {% endif %}
-          <div id="login-area" class="navbar-button col-xs-12 col-sm-12 {% if is_home %}col-md-offset-4{% else %}col-md-offset-4{% endif %} col-md-2">
-            <button id="login-button" type="button" class="btn btn-success btn-xs" data-toggle="modal" data-target="#login-modal">
-              Login
-            </button>
-          </div>
+    <div class="wrapper container">
+      <div class="header clearfix">
+        <nav>
+          <ul class="nav nav-pills pull-right">
+            {% if current_user.is_authenticated %}
+            <li role="presentation" class="active"><a>Hello {{ current_user.name
+                }}</a></li>
+            <li role="presentation">
+              <a href="{{ url_for('logout') }}">Logout</a>
+            </li>
+            {% else %}
+            <li role="presentation" class="active">
+              <a href="{{ url_for('login') }}">Login</a>
+            </li>
+            {% endif %}
+            <li role="presentation">
+              <a href="{{ url_for('home') }}">Home</a>
+            </li>
+          </ul>
+        </nav>
+        <h1 class="site-name">Quiz App</h1>
       </div>
-    </nav>
-    <div id='index' class='index wrapper container'>
-
       <header id='main-search' class='container'>
         <div class='page-header row'>
           <div class='col-xs-12 col-sm-12 col-md-12'>
@@ -75,7 +81,6 @@
       {% block content %}{% endblock %}
 
     </div> <!-- end .wrapper.container -->
-
   </body>
   <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 </html>
