--- a/quizApp/static/css/main.css
+++ b/quizApp/static/css/main.css
@@ -210,7 +210,7 @@ body {
   border-bottom: 1px solid #e5e5e5;
 }
 /* Make the masthead heading the same height as the navigation */
-.header h3 {
+.header h1 {
   margin-top: 0;
   margin-bottom: 0;
   line-height: 40px;
@@ -244,4 +244,8 @@ body {
   .jumbotron {
     border-bottom: 0;
   }
+}
+
+ul#answers {
+  list-style-type: none;
 }
