--- a/quizApp/templates/show_question.html
+++ b/quizApp/templates/show_question.html
@@ -23,7 +23,7 @@ Quiz
   <form action="{{ url_for('update_question', exp_id=exp.id,
         q_id=question.id)}}" method="post" id="question-submit-form">
     {{ mc_form.answers() }}
-    {{ mc_form.submit }}
+    {{ mc_form.submit(class_="btn btn-primary") }}
   </form>
 </div>
 {% endblock %}
