--- a/quizApp/templates/header.html
+++ b/quizApp/templates/header.html
@@ -26,18 +26,18 @@
             <li role="presentation" class="active"><a>Hello {{ current_user.id
                 }}</a></li>
             <li role="presentation">
-              <a href="{{ url_for('logout') }}">Logout</a>
+              <a href="{{ url_for('admin.logout') }}">Logout</a>
             </li>
             <li role="presentation">
-              <a href="{{ url_for('read_experiments') }}">Experiments</a>
+              <a href="{{ url_for('experiments.read_experiments') }}">Experiments</a>
             </li>
             {% else %}
             <li role="presentation" class="active">
-              <a href="{{ url_for('login') }}">Login</a>
+              <a href="{{ url_for('admin.login') }}">Login</a>
             </li>
             {% endif %}
             <li role="presentation">
-              <a href="{{ url_for('home') }}">Home</a>
+              <a href="{{ url_for('core.home') }}">Home</a>
             </li>
           </ul>
         </nav>
