--- a/quizApp/templates/show_question.html
+++ b/quizApp/templates/show_question.html
@@ -23,7 +23,15 @@ Quiz
   <form action="{{ url_for('update_question', exp_id=exp.id,
         q_id=question.id)}}" method="post" id="question-submit-form">
     {{ mc_form.answers() }}
+    {% if question.needs_reflection %}
+        <p>Why do you think this is the correct choice?</p>
+        {{ mc_form.reflection() }}
+        <br />
+    {% endif %}
     {{ mc_form.submit(class_="btn btn-primary") }}
   </form>
+</div>
+<div>
+<p id="explanation"></p>
 </div>
 {% endblock %}
