--- a/quizApp/templates/experiments/show_question.html
+++ b/quizApp/templates/experiments/show_question.html
@@ -20,7 +20,7 @@ Quiz
 
 <div id='question'>
   <h3>{{ question.question }}</h3>
-  <form action="{{ url_for('update_question', exp_id=exp.id,
+  <form action="{{ url_for('experiments.update_question', exp_id=exp.id,
         q_id=question.id)}}" method="post" id="question-submit-form">
     {{ mc_form.answers() }}
     {{ mc_form.submit(class_="btn btn-primary") }}
