--- a/quizApp/templates/experiments/show_question.html
+++ b/quizApp/templates/experiments/show_question.html
@@ -25,13 +25,15 @@ Quiz
     {{ mc_form.answers() }}
     {% if question.needs_reflection %}
         <p>Why do you think this is the correct choice?</p>
-        {{ mc_form.reflection() }}
+        {{ mc_form.reflection(class_="form-control", rows="5") }}
         <br />
     {% endif %}
     {{ mc_form.submit(class_="btn btn-primary") }}
   </form>
 </div>
-<div>
-<p id="explanation"></p>
+<div id="explanation-container">
+  <p id="explanation-text"></p>
+  <a href="#" role="button" id="continue-link"
+    class="btn btn-primary">Continue</a>
 </div>
 {% endblock %}
