--- a/quizApp/templates/experiments/show_question.html
+++ b/quizApp/templates/experiments/show_question.html
@@ -1,5 +1,7 @@
 {% extends 'header.html' %}
 
+{% import 'macros.html' as macros %}
+
 {% block head %}
 <meta name="csrf-token" content="{{ csrf_token() }}">
 <script src="{{ url_for('static', filename='js/experiments_ajax.js') }}"></script>
@@ -22,13 +24,13 @@ Quiz
   <h3>{{ question.question }}</h3>
   <form action="{{ url_for('experiments.update_question', exp_id=exp.id,
         q_id=question.id)}}" method="post" id="question-submit-form">
-    {{ mc_form.answers() }}
+    {{ macros.render_field(mc_form.answers) }}
     {% if question.needs_reflection %}
         <p>Why do you think this is the correct choice?</p>
-        {{ mc_form.reflection(class_="form-control", rows="5") }}
+        {{ macros.render_field(mc_form.reflection, rows="5") }}
         <br />
     {% endif %}
-    {{ mc_form.submit(class_="btn btn-primary") }}
+    {{ macros.render_field(mc_form.submit) }}
   </form>
 </div>
 <div id="explanation-container">
